# dummy

./: .gitignore  .travis.yml  README.md  meson.build
bench/: dummy.cpp  meson.build
bindings/: meson.build  python.cpp
src/: .clang-tidy  meson.build
subprojects/: catch2.wrap
test/: meson.build
